give widget better variable height.

--- a/main/res/drawable/widget_footer.xml
+++ b/main/res/drawable/widget_footer.xml
@@ -10,7 +10,7 @@
     android:bottomLeftRadius="8dip" />
 
   <gradient
-    android:startColor="#99000000"
-    android:endColor="#99000000" />
+    android:startColor="#196fb6"
+    android:endColor="#196fb6" />
 
 </shape>
