Issue 156 - allow 'send to facebook' when checking in

--- a/main/res/layout/shout_activity.xml
+++ b/main/res/layout/shout_activity.xml
@@ -23,6 +23,14 @@
         android:layout_marginRight="5dip"
         android:textColor="@android:color/primary_text_light"
         android:text="@string/tell_twitter" />
+     <CheckBox
+        android:id="@+id/tellFacebookCheckBox"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dip"
+        android:layout_marginRight="5dip"
+        android:textColor="@android:color/primary_text_light"
+        android:text="@string/tell_facebook" />
     <EditText
         android:id="@+id/shoutEditText"
         android:layout_width="fill_parent"
