--- a/main/res/layout/checkin_result_dialog.xml
+++ b/main/res/layout/checkin_result_dialog.xml
@@ -41,12 +41,21 @@
             android:visibility="gone"
             android:textAppearance="@style/TextStyleWhite" />
         <ImageView
+            android:id="@+id/photo"
+            android:layout_height="48dip"
+            android:layout_width="48dip"
+            android:layout_marginTop="40dip"
+            android:layout_marginBottom="5dip"
+            android:layout_marginLeft="5dip"
+            android:gravity="center_vertical"
+            android:src="@drawable/blank_boy"
+            android:visibility="gone" />
+        <ImageView
             android:id="@+id/mayor_crown"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_marginBottom="5dip"
             android:layout_marginLeft="5dip"
-            android:layout_below="@id/totals"
             android:gravity="center_vertical"
             android:src="@drawable/crown"
             android:visibility="gone" />
@@ -55,7 +64,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/totals"
-            android:layout_toRightOf="@id/mayor_crown"
+            android:layout_alignTop="@id/photo"
+            android:layout_toRightOf="@id/photo"
             android:gravity="center"
             android:textSize="14sp"
             android:paddingLeft="5dip"
