--- a/main/res/layout/checkin_result_dialog.xml
+++ b/main/res/layout/checkin_result_dialog.xml
@@ -44,7 +44,7 @@
             android:id="@+id/photo"
             android:layout_height="48dip"
             android:layout_width="48dip"
-            android:layout_marginTop="40dip"
+            android:layout_marginTop="20dip"
             android:layout_marginBottom="5dip"
             android:layout_marginLeft="5dip"
             android:gravity="center_vertical"
@@ -52,10 +52,10 @@
             android:visibility="gone" />
         <ImageView
             android:id="@+id/mayor_crown"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_height="30dip"
+            android:layout_width="30dip"
             android:layout_marginBottom="5dip"
-            android:layout_marginLeft="5dip"
+            android:layout_marginLeft="40dip"
             android:gravity="center_vertical"
             android:src="@drawable/crown"
             android:visibility="gone" />
@@ -68,8 +68,7 @@
             android:layout_toRightOf="@id/photo"
             android:gravity="center"
             android:textSize="14sp"
-            android:paddingLeft="5dip"
-            android:paddingRight="5dip"
+            android:padding="5dip"
             android:visibility="gone"
             android:textAppearance="@style/TextStyleWhite" />
     </RelativeLayout>
