--- a/main/res/layout/checkin_result_dialog.xml
+++ b/main/res/layout/checkin_result_dialog.xml
@@ -42,20 +42,19 @@
             android:textAppearance="@style/TextStyleWhite" />
         <ImageView
             android:id="@+id/photo"
-            android:layout_height="48dip"
-            android:layout_width="48dip"
-            android:layout_marginTop="20dip"
+            android:layout_height="42dip"
+            android:layout_width="42dip"
+            android:layout_marginTop="28dip"
             android:layout_marginBottom="5dip"
-            android:layout_marginLeft="5dip"
+            android:layout_marginLeft="8dip"
             android:gravity="center_vertical"
             android:src="@drawable/blank_boy"
             android:visibility="gone" />
         <ImageView
             android:id="@+id/mayor_crown"
-            android:layout_height="30dip"
-            android:layout_width="30dip"
-            android:layout_marginBottom="5dip"
-            android:layout_marginLeft="40dip"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="5dip"
             android:gravity="center_vertical"
             android:src="@drawable/crown"
             android:visibility="gone" />
