--- a/main/res/layout/shout_activity.xml
+++ b/main/res/layout/shout_activity.xml
@@ -1,52 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/shout"
-    android:layout_height="wrap_content"
     android:layout_width="fill_parent"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
     android:layout_below="@id/dialog_title"
 >
-    <CheckBox
-        android:id="@+id/tellFriendsCheckBox"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/shout"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dip"
-        android:layout_marginRight="5dip"
-        android:textColor="@android:color/primary_text_light"
-        android:text="@string/tell_my_friends" />
-    <CheckBox
-        android:id="@+id/tellTwitterCheckBox"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dip"
-        android:layout_marginRight="5dip"
-        android:textColor="@android:color/primary_text_light"
-        android:text="@string/tell_twitter" />
-     <CheckBox
-        android:id="@+id/tellFacebookCheckBox"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dip"
-        android:layout_marginRight="5dip"
-        android:textColor="@android:color/primary_text_light"
-        android:text="@string/tell_facebook" />
-    <EditText
-        android:id="@+id/shoutEditText"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dip"
-        android:layout_marginRight="5dip"
-        android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
-        android:imeOptions="actionDone"
-        android:lines="2"
-        android:hint="@string/shout_hint" />
-    <Button
-        android:id="@+id/checkinButton"
-        android:layout_marginLeft="5dip"
-        android:layout_marginRight="5dip"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Large"
-        android:text="@string/checkin_action_label" />
-</LinearLayout>
+        android:orientation="vertical"
+    >
+        <CheckBox
+            android:id="@+id/tellFriendsCheckBox"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dip"
+            android:layout_marginRight="5dip"
+            android:textColor="@android:color/primary_text_light"
+            android:text="@string/tell_my_friends" />
+        <CheckBox
+            android:id="@+id/tellTwitterCheckBox"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dip"
+            android:layout_marginRight="5dip"
+            android:textColor="@android:color/primary_text_light"
+            android:text="@string/tell_twitter" />
+        <CheckBox
+            android:id="@+id/tellFacebookCheckBox"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dip"
+            android:layout_marginRight="5dip"
+            android:textColor="@android:color/primary_text_light"
+            android:text="@string/tell_facebook" />
+        <Button
+            android:id="@+id/checkinButton"
+            android:layout_marginLeft="5dip"
+            android:layout_marginRight="5dip"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="@android:style/TextAppearance.Large"
+            android:text="@string/checkin_action_label" />
+        <EditText
+            android:id="@+id/shoutEditText"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dip"
+            android:layout_marginRight="5dip"
+            android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
+            android:imeOptions="actionDone"
+            android:lines="2"
+            android:hint="@string/shout_hint" />
+    </LinearLayout>
+</ScrollView>
