Changed : - UserActivity layouts  and related - Checking Result Dialog ( purple separator instead of blue ) - Different icon for Leadership board.

--- a/main/res/layout/user_activity.xml
+++ b/main/res/layout/user_activity.xml
@@ -1,128 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-  <!-- Copyright 2009 Joe LaPenna -->
-
+    <!-- Copyright 2009 Joe LaPenna -->
 <RelativeLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:foursquared="http://schemas.android.com/apk/res/com.joelapenna.foursquared"
-  android:layout_width="fill_parent"
-  android:layout_height="wrap_content">
-
-  <RelativeLayout
-    android:id="@+id/userLayout"
-
-    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:foursquared="http://schemas.android.com/apk/res/com.joelapenna.foursquared"
     android:layout_width="fill_parent"
-
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentTop="true">
-
-    <ImageView
-      android:id="@+id/photo"
-
-      android:layout_width="75dip"
-      android:layout_height="75dip"
-
-      android:layout_alignParentTop="true"
-      android:layout_alignParentLeft="true"
-      android:layout_marginRight="6dip"
-
-      gravity="center_vertical"
-      android:layout_gravity="center_vertical"
-
-      android:scaleType="center" />
-
+    android:layout_height="wrap_content"
+>
+    <RelativeLayout
+        android:id="@+id/userLayout"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:background="@drawable/foursquare_gradient"
+    >
+        <ImageView
+            android:id="@+id/photo"
+            android:background="@drawable/photo_bg"
+            android:paddingTop="5dip"
+            android:paddingLeft="7dip"
+            android:paddingBottom="8dip"
+            android:paddingRight="7dip"
+            android:layout_width="75dip"
+            android:layout_height="75dip"
+            android:layout_marginRight="6dip"
+            android:layout_centerVertical="true"
+            android:src="@drawable/blank_boy" />
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/photo"
+            android:textAppearance="@android:style/TextAppearance.Large"
+            android:inputType="text"
+            android:ellipsize="marquee"
+            android:gravity="center_vertical" />
+        <TextView
+            android:id="@+id/secondLine"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/photo"
+            android:layout_below="@id/name"
+            android:textAppearance="@style/TextStyleWhite"
+            android:textSize="12dip"
+            android:textStyle="italic" />
+    </RelativeLayout>
     <TextView
-      android:id="@+id/name"
-
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-
-      android:layout_toRightOf="@id/photo"
-      android:layout_alignParentRight="true"
-      android:layout_alignParentTop="true"
-
-      android:textAppearance="@android:style/TextAppearance.Large"
-
-      android:inputType="text"
-      android:ellipsize="marquee"
-
-      android:gravity="center_vertical" />
-
+        android:id="@+id/venueHeader"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="@string/last_seen_header"
+        android:layout_below="@id/userLayout"
+        style="@style/listSeparatorTextViewStylePurple" />
+    <com.joelapenna.foursquared.widget.VenueView
+        android:id="@+id/venue"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/venueHeader"
+        android:background="@color/white"
+        foursquared:checkinButton="false"
+        foursquared:collapsible="true" />
     <TextView
-      android:id="@+id/secondLine"
-
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-
-      android:layout_toRightOf="@id/photo"
-      android:layout_below="@id/name"
-      android:layout_alignParentRight="true"
-
-      android:textStyle="italic" />
-  </RelativeLayout>
-
-  <TextView
-    android:id="@+id/venueHeader"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="5dip"
-
-    android:visibility="invisible"
-
-    android:text="@string/last_seen_header"
-
-    android:layout_alignParentRight="true"
-    android:layout_alignParentLeft="true"
-    android:layout_below="@id/userLayout"
-    style="@style/listSeparatorTextViewStyle" />
-
-  <com.joelapenna.foursquared.widget.VenueView
-    android:id="@+id/venue"
-
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-
-    android:layout_alignParentRight="true"
-    android:layout_alignParentLeft="true"
-    android:layout_below="@id/venueHeader"
-
-    foursquared:checkinButton="false"
-    foursquared:collapsible="true" />
-
-  <TextView
-    android:id="@+id/badgesHeader"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-
-    android:visibility="invisible"
-
-    android:text="@string/badges_header"
-
-    android:layout_alignParentRight="true"
-    android:layout_alignParentLeft="true"
-    android:layout_below="@id/venue"
-    android:layout_marginTop="3dip"
-
-    style="@style/listSeparatorTextViewStyle" />
-
-  <GridView
-    android:id="@+id/badgesGrid"
-    android:layout_width="fill_parent"
-    android:layout_height="0dip"
-    android:layout_weight="1"
-
-    android:layout_alignParentRight="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentBottom="true"
-    android:layout_below="@id/badgesHeader"
-
-    android:layout_marginTop="3dip"
-
-    android:horizontalSpacing="12dip"
-    android:verticalSpacing="12dip"
-
-    android:columnWidth="80dip"
-    android:numColumns="auto_fit" />
-
+        android:id="@+id/badgesHeader"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="@string/badges_header"
+        android:layout_below="@id/venue"
+        style="@style/listSeparatorTextViewStylePurple" />
+    <GridView
+        android:id="@+id/badgesGrid"
+        android:background="@drawable/grey_gradient"
+        android:layout_width="fill_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/badgesHeader"
+        android:horizontalSpacing="12dip"
+        android:verticalSpacing="12dip"
+        android:columnWidth="80dip"
+        android:numColumns="auto_fit" />
 </RelativeLayout>
