Updated copyright statement of new files, changed ime action button for find friends by user input to be a search button. When a search is started, the ime pad is dismissed if visible.

--- a/main/res/layout/add_friends_by_user_input_activity.xml
+++ b/main/res/layout/add_friends_by_user_input_activity.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- Copyright 2010 Mark Wyszomierski -->
+ 
 <LinearLayout 
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical" 
@@ -30,7 +33,7 @@
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:inputType="textCapWords"
-      android:imeOptions="actionNext"
+      android:imeOptions="actionSearch"
       android:hint="@string/add_friends_by_name_hint" />
      
     <Button
