--- a/main/res/layout/add_friends_list_item.xml
+++ b/main/res/layout/add_friends_list_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright 2009 Joe LaPenna -->
+
+<!-- Copyright 2010 Mark Wyszomierski -->
+
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/addFriendListItemBackground"
