Added gravity=top for tip EditText so cursor is placed at top of field instead of vertical center.

--- a/main/res/layout/tip_add_dialog.xml
+++ b/main/res/layout/tip_add_dialog.xml
@@ -23,5 +23,6 @@
     android:layout_height="wrap_content"
     android:inputType="textShortMessage|textAutoCorrect|textCapSentences|textMultiLine"
     android:imeOptions=""
-    android:lines="3" />
+    android:lines="3"
+    android:gravity="top" />
 </LinearLayout>
