--- a/main/res/layout/add_friends_list_item.xml
+++ b/main/res/layout/add_friends_list_item.xml
@@ -10,28 +10,32 @@
   android:orientation="horizontal"
   android:gravity="center_vertical"
   android:paddingRight="12dip"
+  android:paddingTop="5dip"
+  android:paddingBottom="5dip"
   > 
-    <TextView
-      android:id="@+id/addFriendListItemName"
-      android:layout_width="0dip"
-      android:layout_height="wrap_content"
-      android:layout_weight="1"
-      android:textColor="@color/black_end"
-      android:textAppearance="@android:style/TextAppearance.Small" 
-      android:singleLine="true"
-      android:ellipsize="marquee"
-      android:layout_gravity="center_vertical" 
-      android:paddingLeft="5dip" />
-<!-- 
+  
   <ImageView
-    android:id="@+id/addFriendListItemAddButton"
-    android:layout_width="wrap_content"
-    android:layout_height="fill_parent"
-    android:layout_gravity="right"
+    android:id="@+id/addFriendListItemPhoto"
+    android:layout_height="46dip"
+    android:layout_width="46dip"
+    android:background="#186db5"
+    android:src="@drawable/blank_boy"
     android:gravity="center_vertical"
-    android:src="@drawable/recent_checkins_tab_unselected" />
- -->
- 
+    android:scaleType="fitXY" 
+	android:padding="2dip" />
+      
+  <TextView
+    android:id="@+id/addFriendListItemName"
+    android:layout_width="0dip"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:textColor="@color/black_end"
+    android:textAppearance="@android:style/TextAppearance.Small" 
+    android:singleLine="true"
+    android:ellipsize="marquee"
+    android:layout_gravity="center_vertical" 
+    android:paddingLeft="10dip" />
+      
   <Button
     android:id="@+id/addFriendListItemAddButton"
     android:layout_width="wrap_content"
@@ -45,9 +49,5 @@
     android:layout_height="wrap_content"
     android:textAppearance="@android:style/TextAppearance.Small" 
     android:text="Info" />
-    
-    <!-- 
-    android:text="@string/add_friends_by_address_book"
-     -->
     
 </LinearLayout>
