--- a/main/res/layout/friend_request_list_item.xml
+++ b/main/res/layout/friend_request_list_item.xml
@@ -4,15 +4,28 @@
  
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/addFriendListItemBackground"
+  android:id="@+id/friendRequestListItemBackground"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:orientation="horizontal"
   android:gravity="center_vertical"
   android:paddingRight="12dip"
+  android:paddingTop="5dip"
+  android:paddingBottom="5dip"
   > 
+  
+  <ImageView
+    android:id="@+id/friendRequestListItemPhoto"
+    android:layout_height="46dip"
+    android:layout_width="46dip"
+    android:background="#186db5"
+    android:src="@drawable/blank_boy"
+    android:gravity="center_vertical"
+    android:scaleType="fitXY" 
+	android:padding="2dip" />
+	
   <TextView
-    android:id="@+id/addFriendListItemName"
+    android:id="@+id/friendRequestListItemName"
     android:layout_width="0dip"
     android:layout_height="wrap_content"
     android:layout_weight="1"
@@ -21,27 +34,20 @@
     android:singleLine="true"
     android:ellipsize="marquee"
     android:layout_gravity="center_vertical" 
-    android:paddingLeft="5dip" />
+    android:paddingLeft="10dip" />
  
-  <Button
-    android:id="@+id/friendRequestInfoButton"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:textAppearance="@android:style/TextAppearance.Small" 
-    android:text="Info" />
-    
   <Button
     android:id="@+id/friendRequestApproveButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textAppearance="@android:style/TextAppearance.Small" 
-    android:text="Approve" />
+    android:text="Add" />
     
   <Button
     android:id="@+id/friendRequestDenyButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textAppearance="@android:style/TextAppearance.Small" 
-    android:text="Deny" />
+    android:text="Ignore" />
     
 </LinearLayout>
