--- a/main/res/layout/friend_requests_activity.xml
+++ b/main/res/layout/friend_requests_activity.xml
@@ -21,13 +21,17 @@
     android:id="@android:id/empty"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:gravity="center"
     >
+    
     <TextView
+      android:id="@+id/textViewNoRequests"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="@color/black_end"
       android:textAppearance="@android:style/TextAppearance.Small" 
-      android:text="You have no new friend requests."
+      android:text="@string/friend_requests_no_new_requests"
+      android:visibility="gone"
       />
   </LinearLayout>
 
