--- a/main/res/layout/friend_request_list_item.xml
+++ b/main/res/layout/friend_request_list_item.xml
@@ -14,27 +14,34 @@
   android:paddingBottom="5dip"
   > 
   
-  <ImageView
-    android:id="@+id/friendRequestListItemPhoto"
-    android:layout_height="46dip"
-    android:layout_width="46dip"
-    android:background="#186db5"
-    android:src="@drawable/blank_boy"
-    android:gravity="center_vertical"
-    android:scaleType="fitXY" 
-	android:padding="2dip" />
-	
-  <TextView
-    android:id="@+id/friendRequestListItemName"
+  <LinearLayout
+    android:id="@+id/friendRequestListItemBClickableArea"
     android:layout_width="0dip"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:textColor="@color/black_end"
-    android:textAppearance="@android:style/TextAppearance.Small" 
-    android:singleLine="true"
-    android:ellipsize="marquee"
-    android:layout_gravity="center_vertical" 
-    android:paddingLeft="10dip" />
+    android:orientation="horizontal"> 
+  
+    <ImageView
+      android:id="@+id/friendRequestListItemPhoto"
+      android:layout_height="46dip"
+      android:layout_width="46dip"
+      android:background="#186db5"
+      android:src="@drawable/blank_boy"
+      android:gravity="center_vertical"
+      android:scaleType="fitXY" 
+	  android:padding="2dip" />
+	
+    <TextView
+      android:id="@+id/friendRequestListItemName"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:textColor="@color/black_end"
+      android:textAppearance="@android:style/TextAppearance.Small" 
+      android:singleLine="true"
+      android:ellipsize="marquee"
+      android:layout_gravity="center_vertical" 
+      android:paddingLeft="10dip" />
+  </LinearLayout>
  
   <Button
     android:id="@+id/friendRequestApproveButton"
