--- a/main/res/layout/venue_list_item.xml
+++ b/main/res/layout/venue_list_item.xml
@@ -8,17 +8,14 @@
 
   <ImageView
     android:id="@+id/icon"
-    android:layout_width="30dip"
+    android:layout_width="40dip"
     android:layout_height="fill_parent"
-
     android:layout_alignParentTop="true"
     android:layout_alignParentBottom="true"
     android:paddingLeft="7dip"
     android:paddingTop="5dip"
-
-    android:scaleType="matrix"
-
-    android:src="@drawable/map_marker_blue" />
+    android:src="@drawable/map_marker_blue"
+    gravity="center_horizontal" />
 
   <TextView
     android:id="@+id/venueName"
