Checking in rough semi-working version of category picking using ViewFlipper to animate drilling down to different levels of the category tree, will clean up the rest shortly.

--- a/main/res/layout/add_venue_activity.xml
+++ b/main/res/layout/add_venue_activity.xml
@@ -84,6 +84,13 @@
         android:phoneNumber="true"
         android:imeOptions="actionDone"
         android:hint="555-2368" />
+      
+      <Button
+        android:id="@+id/addCategoryButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Pick Category" />
+        
       <Button
         android:id="@+id/addVenueButton"
         android:layout_width="fill_parent"
