--- a/main/res/drawable/border_round_rect_selector.xml
+++ b/main/res/drawable/border_round_rect_selector.xml
@@ -6,17 +6,19 @@
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/myselector" >
    
-   <!-- Non focused states -->
-   <item 
-     android:state_focused="false" 
-     android:state_selected="false" 
-     android:state_pressed="false"
-     android:drawable="@drawable/border_round_rect" />
+  <!-- Non focused states -->
+  <item 
+    android:state_focused="false" 
+    android:state_selected="false" 
+    android:state_pressed="false"
+    android:state_enabled="true"
+    android:drawable="@drawable/border_round_rect" />
      
   <item 
     android:state_focused="false" 
     android:state_selected="true"
     android:state_pressed="false"
+    android:state_enabled="true"
     android:drawable="@drawable/border_round_rect" />
 
   <!-- Focused states -->
@@ -24,12 +26,14 @@
     android:state_focused="true" 
     android:state_selected="false"
     android:state_pressed="false" 
+    android:state_enabled="true"
     android:drawable="@drawable/border_round_rect_on" />
     
   <item 
     android:state_focused="true" 
     android:state_selected="true"
     android:state_pressed="false" 
+    android:state_enabled="true"
     android:drawable="@drawable/border_round_rect_on" />
 
   <!-- Pressed -->
@@ -37,4 +41,9 @@
     android:state_pressed="true" 
     android:drawable="@drawable/border_round_rect_on" />
     
+  <!-- Disabled -->
+  <item 
+    android:state_enabled="false" 
+    android:drawable="@drawable/border_round_rect_disabled" />
+
 </selector>
