--- a/main/res/layout/category_picker_list_item.xml
+++ b/main/res/layout/category_picker_list_item.xml
@@ -17,7 +17,7 @@
     android:id="@+id/categoryPickerIcon"
     android:layout_width="32dip"
     android:layout_height="32dip"
-    android:src="@drawable/map_marker_blue"
+    android:src="@drawable/category_none"
     android:scaleType="fitCenter"  
     android:gravity="center_horizontal"
     android:layout_marginLeft="5dip" />
