--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -9,9 +9,9 @@
     <color
         name="purple_end">#5d2761</color>
     <color
-        name="blue_start">#176bb4</color>
+        name="blue_start">#427BBA</color>
     <color
-        name="blue_end">#7eddfc</color>
+        name="blue_end">#427BBA</color>
     <color
         name="lgrey_start">#BFC0C0</color>
     <color
