--- a/main/res/layout/checkin_list_item.xml
+++ b/main/res/layout/checkin_list_item.xml
@@ -9,11 +9,8 @@
   android:paddingRight="10dip"
   style="@style/listItemStyle">
 
-<!-- android:layout_width="?android:attr/listPreferredItemHeight" -->
-<!-- android:layout_height="?android:attr/listPreferredItemHeight" -->
   <ImageView
     android:id="@+id/photo"
-
 	android:layout_height="46dip"
 	android:layout_width="46dip"
 	android:padding="2dip"
@@ -25,68 +22,61 @@
     android:layout_marginRight="8.5dip"
     android:layout_marginBottom="15dip"
     android:src="@drawable/blank_boy"
-
     android:gravity="center_vertical"
-
     android:scaleType="fitXY" />
 
   <TextView
     android:id="@+id/firstLine"
-
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-
     android:layout_toRightOf="@id/photo"
     android:layout_alignTop="@id/photo"
     android:layout_alignParentRight="true"
     android:layout_alignWithParentIfMissing="true"
-
     android:gravity="center_vertical"
-    android:textAppearance="@android:style/TextAppearance.Small"
-    android:textStyle="bold"
-
+    android:textAppearance="@style/TextViewStyleCheckinListItemLine1"
     android:maxLines="1"
     android:ellipsize="end" />
-
+    
   <TextView
-    android:id="@+id/timeTextView"
-
+    android:id="@+id/secondLine"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-
     android:layout_below="@id/firstLine"
-    android:layout_alignParentRight="true"
+    android:layout_toRightOf="@id/photo"
     android:layout_alignParentBottom="true"
     android:layout_alignWithParentIfMissing="true"
-
-    android:gravity="right|bottom"
-
-    style="@style/secondaryTextStyle"
-
+    android:gravity="left|bottom"
+    android:textAppearance="@style/TextViewStyleCheckinListItemLine2"
     android:maxLines="1"
     android:scrollHorizontally="true"
     android:ellipsize="end" />
 
-<!-- android:textStyle="italic" -->
-
   <TextView
     android:id="@+id/shoutTextView"
-
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-
     android:layout_toRightOf="@id/photo"
-    android:layout_toLeftOf="@id/timeTextView"
-    android:layout_below="@id/firstLine"
+    android:layout_below="@id/secondLine"
     android:layout_alignParentBottom="true"
-
     android:paddingRight="3dip"
-
     android:gravity="left"
-    android:textAppearance="@android:style/TextAppearance.Small"
-    
-
+    android:textAppearance="@style/TextViewStyleCheckinListItemLine2"
     android:maxLines="2"
+    android:ellipsize="end" />
+    
+  <TextView
+    android:id="@+id/timeTextView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/shoutTextView"
+    android:layout_toRightOf="@id/photo"
+    android:layout_alignParentBottom="true"
+    android:layout_alignWithParentIfMissing="true"
+    android:gravity="left|bottom"
+    style="@style/TextViewStyleCheckinListItemLine3"
+    android:maxLines="1"
+    android:scrollHorizontally="true"
     android:ellipsize="end" />
 
 </RelativeLayout>
