--- a/main/res/layout/venue_list_item.xml
+++ b/main/res/layout/venue_list_item.xml
@@ -28,37 +28,32 @@
     android:id="@+id/venueName"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-
     android:layout_toRightOf="@id/icon"
     android:layout_alignParentRight="true"
     android:layout_alignParentTop="true"
     android:layout_alignWithParentIfMissing="true"
     android:paddingLeft="7dip"
-    android:textColor="@color/black_end"
-    android:textAppearance="@android:style/TextAppearance.Medium" />
+    android:textAppearance="@style/TextViewStyleVenueNameListItem"
+    />
 
   <TextView
     android:id="@+id/venueLocationLine1"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-
     android:layout_toRightOf="@id/icon"
     android:layout_alignParentRight="true"
     android:layout_below="@id/venueName"
     android:paddingLeft="7dip"
-    android:textColor="@color/black_end"
-    android:textAppearance="@android:style/TextAppearance.Small" />
+    android:textAppearance="@style/TextViewStyleVenueAddressListItem" />
 
   <TextView
     android:id="@+id/venueLocationLine2"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-
     android:layout_toRightOf="@id/icon"
     android:layout_alignParentRight="true"
     android:layout_below="@id/venueLocationLine1"
     android:paddingLeft="7dip"
-    android:textColor="@color/black_end"
-    android:textAppearance="@android:style/TextAppearance.Small" />
+    android:textAppearance="@style/TextViewStyleVenueAddressListItem" />
 
 </RelativeLayout>
