--- a/main/res/layout/checkin_list_item.xml
+++ b/main/res/layout/checkin_list_item.xml
@@ -11,12 +11,12 @@
 
   <ImageView
     android:id="@+id/photo"
-	android:layout_height="46dip"
-	android:layout_width="46dip"
-	android:padding="2dip"
-    android:background="#186db5"
+	android:layout_height="44dip"
+	android:layout_width="44dip"
+    android:background="@drawable/photo_background"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
+    android:padding="3dip"
     android:layout_marginLeft="7dip"
     android:layout_marginTop="5.5dip"
     android:layout_marginRight="8.5dip"
