Large push to get new user details activity in. To support the new activity, it required several new additions including making the foursquare types parcelable so it would be easy to pass instances of objects between activities. Also added history web service support. User details activity now shows logged-in-user's history, friends' info, and friends list for all. While functional, this build now requires styling for ui components. Also need to update the parser generator python files to do the parcelable generation automatically as these updates were only done manually.

--- a/main/res/layout/loadable_list_activity.xml
+++ b/main/res/layout/loadable_list_activity.xml
@@ -8,7 +8,9 @@
   <ListView
     android:id="@android:id/list"
     android:layout_height="fill_parent"
-    android:layout_width="fill_parent" />
+    android:layout_width="fill_parent"
+    android:drawSelectorOnTop="false"
+    android:scrollbars="vertical" />
 
   <include
     android:id="@android:id/empty"
