--- a/main/res/layout/checkin_list_item.xml
+++ b/main/res/layout/checkin_list_item.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
   <!-- Copyright 2009 Joe LaPenna -->
 
-<RelativeLayout
+<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="?android:attr/listPreferredItemHeight"
   android:paddingBottom="10dip"
   android:paddingRight="10dip"
+  android:orientation="horizontal"
   style="@style/listItemStyle">
 
   <ImageView
@@ -25,58 +27,46 @@
     android:gravity="center_vertical"
     android:scaleType="fitXY" />
 
-  <TextView
-    android:id="@+id/firstLine"
+  <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_toRightOf="@id/photo"
-    android:layout_alignTop="@id/photo"
-    android:layout_alignParentRight="true"
-    android:layout_alignWithParentIfMissing="true"
-    android:gravity="center_vertical"
-    android:textAppearance="@style/TextViewStyleCheckinListItemLine1"
-    android:maxLines="1"
-    android:ellipsize="end" />
+    android:orientation="vertical" >
     
-  <TextView
-    android:id="@+id/secondLine"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_below="@id/firstLine"
-    android:layout_toRightOf="@id/photo"
-    android:layout_alignParentBottom="true"
-    android:layout_alignWithParentIfMissing="true"
-    android:gravity="left|bottom"
-    android:textAppearance="@style/TextViewStyleCheckinListItemLine2"
-    android:maxLines="1"
-    android:scrollHorizontally="true"
-    android:ellipsize="end" />
-
-  <TextView
-    android:id="@+id/shoutTextView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_toRightOf="@id/photo"
-    android:layout_below="@id/secondLine"
-    android:layout_alignParentBottom="true"
-    android:paddingRight="3dip"
-    android:gravity="left"
-    android:textAppearance="@style/TextViewStyleCheckinListItemLine2"
-    android:maxLines="2"
-    android:ellipsize="end" />
+    <TextView
+      android:id="@+id/firstLine"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textAppearance="@style/TextViewStyleCheckinListItemLine1"
+      android:maxLines="1"
+      android:ellipsize="end" />
     
-  <TextView
-    android:id="@+id/timeTextView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_below="@id/shoutTextView"
-    android:layout_toRightOf="@id/photo"
-    android:layout_alignParentBottom="true"
-    android:layout_alignWithParentIfMissing="true"
-    android:gravity="left|bottom"
-    style="@style/TextViewStyleCheckinListItemLine3"
-    android:maxLines="1"
-    android:scrollHorizontally="true"
-    android:ellipsize="end" />
+    <TextView
+      android:id="@+id/secondLine"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textAppearance="@style/TextViewStyleCheckinListItemLine2"
+      android:maxLines="1"
+      android:scrollHorizontally="true"
+      android:ellipsize="end" />
 
-</RelativeLayout>
+    <TextView
+      android:id="@+id/shoutTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:paddingRight="3dip"
+      android:textAppearance="@style/TextViewStyleCheckinListItemLine2"
+      android:maxLines="2"
+      android:ellipsize="end" />
+    
+    <TextView
+      android:id="@+id/timeTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:maxLines="1"
+      android:scrollHorizontally="true"
+      android:ellipsize="end"
+      android:textAppearance="@style/TextViewStyleCheckinListItemLine3" />
+
+  </LinearLayout>
+  
+</LinearLayout>
