--- a/main/res/layout/user_details_activity.xml
+++ b/main/res/layout/user_details_activity.xml
@@ -2,120 +2,156 @@
     
     <!-- Copyright 2010 Mark Wyszomierski -->
     
-<ScrollView 
+<TabHost 
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/ScrollView01" 
-  android:layout_width="fill_parent" 
-  android:layout_height="fill_parent" >
-  
+  android:id="@android:id/tabhost"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent"
+  style="@style/tabHostStyle">
+    
+  <LinearLayout
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/white"> 
+        
+        
+  <!-- This is the top header, contains user's picture etc. -->
   <LinearLayout 
     android:layout_width="fill_parent" 
-    android:layout_height="fill_parent">
-    
-    <!-- This is the top header, contains user's picture etc. -->
+    android:layout_height="wrap_content"
+    android:background="@color/blue_start"
+    android:paddingLeft="5dip" 
+    android:paddingRight="5dip" 
+    android:paddingTop="10dip" 
+    android:paddingBottom="10dip" 
+    >
+
+    <ImageView
+      android:id="@+id/userDetailsActivityPhoto"
+      android:layout_width="80dip"
+      android:layout_height="80dip"
+      android:padding="3dip"
+      android:background="@drawable/photo_background"
+      android:src="@drawable/blank_boy"
+      android:scaleType="fitCenter"  
+      android:gravity="center_vertical" />
+      
     <LinearLayout 
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
-      android:background="@color/blue_start"
-      android:paddingLeft="5dip" 
-      android:paddingRight="5dip" 
-      android:paddingTop="10dip" 
-      android:paddingBottom="10dip" 
+      android:paddingLeft="10dip"
+      android:orientation="vertical" 
       >
-
-      <ImageView
-        android:id="@+id/userDetailsActivityPhoto"
-        android:layout_width="72dip"
-        android:layout_height="72dip"
-        android:padding="3dip"
-        android:background="@drawable/photo_background"
-        android:src="@drawable/blank_boy"
-        android:scaleType="fitCenter"  
-        android:gravity="center_vertical" />
-      
-      <LinearLayout 
+        
+      <TextView 
+        android:id="@+id/userDetailsActivityName" 
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextViewStyleUserDetailsActivityTitle" />
+          
+      <LinearLayout
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
-        android:paddingLeft="10dip"
-        android:orientation="vertical" 
-        >
-        
-        <TextView 
-          android:id="@+id/userDetailsActivityName" 
-          android:text="Anonymous" 
-          android:layout_width="wrap_content" 
-          android:layout_height="wrap_content"
-          android:textAppearance="@style/TextViewStyleUserDetailsActivityTitle" />
+        android:orientation="horizontal" 
+        android:paddingTop="10dip" >
           
         <LinearLayout
-          android:layout_width="fill_parent" 
+          android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
-          android:orientation="horizontal" >
+          android:orientation="vertical"
+          android:background="@drawable/user_details_activity_round_rect_badges"
+          android:layout_marginRight="10dip" >
+        
+          <TextView 
+            android:text="@string/user_details_activity_title_mayorships" 
+            android:layout_width="wrap_content" 
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextViewStyleUserDetailsActivityNumBadgesTitle" />
+              
+          <LinearLayout
+            android:layout_width="fill_parent" 
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
           
-          <LinearLayout
-            android:layout_width="wrap_content" 
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/user_details_activity_round_rect_badges" >
-        
             <TextView 
-              android:text="MAYORSHIPS" 
+              android:id="@+id/userDetailsActivityNumMayorships" 
               android:layout_width="wrap_content" 
               android:layout_height="wrap_content"
-              android:textAppearance="@style/TextViewStyleUserDetailsActivityNumBadgesTitle" />
-              
-            <LinearLayout
-              android:layout_width="fill_parent" 
-              android:layout_height="wrap_content"
-              android:orientation="horizontal" >
+              android:text="-" 
+              android:textAppearance="@style/TextViewStyleUserDetailsActivityNumBadges" />
            
-              <TextView 
-                android:text="-" 
-                android:id="@+id/userDetailsActivityNumMayorships" 
-                android:layout_width="wrap_content" 
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextViewStyleUserDetailsActivityNumBadges" />
-            
-            </LinearLayout>
-              
           </LinearLayout>
-         
-          <LinearLayout
-            android:layout_width="wrap_content" 
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/user_details_activity_round_rect_badges" >
-        
-            <TextView 
-              android:text="BADGES" 
-              android:layout_width="wrap_content" 
-              android:layout_height="wrap_content"
-              android:textAppearance="@style/TextViewStyleUserDetailsActivityNumBadgesTitle" />
               
-            <LinearLayout
-              android:layout_width="fill_parent" 
-              android:layout_height="wrap_content"
-              android:orientation="horizontal" >
-           
-              <TextView 
-                android:text="-" 
-                android:id="@+id/userDetailsActivityNumBadges" 
-                android:layout_width="wrap_content" 
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextViewStyleUserDetailsActivityNumBadges" />
-            
-            </LinearLayout>
-              
-          </LinearLayout>
-        
         </LinearLayout>
+         
+        <LinearLayout
+          android:layout_width="wrap_content" 
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          android:background="@drawable/user_details_activity_round_rect_badges" >
+        
+          <TextView 
+            android:text="@string/user_details_activity_title_badges" 
+            android:layout_width="wrap_content" 
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextViewStyleUserDetailsActivityNumBadgesTitle" />
+              
+          <LinearLayout
+            android:layout_width="fill_parent" 
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+           
+            <TextView 
+              android:id="@+id/userDetailsActivityNumBadges" 
+              android:layout_width="wrap_content" 
+              android:layout_height="wrap_content"
+              android:text="-" 
+              android:textAppearance="@style/TextViewStyleUserDetailsActivityNumBadges" />
+            
+          </LinearLayout>
+              
+        </LinearLayout>
+        
       </LinearLayout>
+    </LinearLayout>
         
   </LinearLayout>
-   
-   <!-- 
-   <TabWidget android:id="@android:id/tabs" android:layout_width="wrap_content" android:layout_height="wrap_content"></TabWidget>
-     -->
-     
+  
+  <!-- Displays a progress bar when trying to load user details and tab is hidden. -->
+  <LinearLayout 
+    android:id="@+id/userDetailsActivityLayoutProgressBar" 
+    android:layout_width="fill_parent" 
+    android:layout_height="fill_parent"
+    android:gravity="center"
+    > 
+    
+    <ProgressBar 
+      android:id="@+id/userDetailsActivityProgressBar" 
+      android:layout_width="wrap_content" 
+      android:layout_height="wrap_content"
+      style="?android:attr/progressBarStyleSmall"  />
+      
   </LinearLayout>
-</ScrollView>
+  
+  
+  <!-- At startup, don't show any tabs at all until we've loaded our full user object. -->
+  <TabWidget
+    android:id="@android:id/tabs"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" />
+            
+    <FrameLayout
+      android:id="@android:id/tabcontent"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent">
+          
+      <TextView  
+        android:id="@+id/userDetailsActivityTextViewTabDummy" 
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" 
+        android:text="" />
+                
+    </FrameLayout>
+  </LinearLayout>
+</TabHost>
