Added some guards on the parcelable code to avoid trying to write null child objects, added simple badge activity dedicated to showing just a simple list of a user's badeges. Would be nice to update this activity to also show all badges the user has yet to unlock as well, optional.

--- a/main/res/layout/user_details_activity.xml
+++ b/main/res/layout/user_details_activity.xml
@@ -86,10 +86,13 @@
         </LinearLayout>
          
         <LinearLayout
+          android:id="@+id/userDetailsActivityNumBadgesLayout" 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content"
           android:orientation="vertical"
-          android:background="@drawable/user_details_activity_round_rect_badges" >
+          android:background="@drawable/user_details_activity_round_rect_badges"
+          android:focusable="true"
+          android:clickable="true" >
         
           <TextView 
             android:text="@string/user_details_activity_title_badges" 
